--- a/client/Shoe-web/Shoe-tec boys.html
+++ b/client/Shoe-web/Shoe-tec boys.html
@@ -116,16 +116,16 @@
             <button class="search-button">Search</button>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/Stelatoes.jpeg" class="shoe-img">
+            <a href="/client/Shoe-web/Payment method.html">
+                <img src="/client/Kids/boys shoes/Stelatoes.jpeg" class="shoe-img">
                 <div class="overlay">
                     <h3>Stelatoes Shoes</h3>
                 </div>
             </a>
         </div>
         <div class="button-container">
-            <button onclick="window.location.href='/Shoe-web/mesh-sneakers.html'" class="button">Mesh sneakers</button>
-            <button onclick="window.location.href='/Shoe-web/boys school shoes.html'" class="button">School shoes</button>
+            <button onclick="window.location.href='/client/shoe-web/mesh-sneakers.html'" class="button">Mesh sneakers</button>
+            <button onclick="window.location.href='/client/Shoe-web/boys school shoes.html'" class="button">School shoes</button>
         </div>
     </div>
 </body>
