--- a/client/Shoe-web/boys school shoes.html
+++ b/client/Shoe-web/boys school shoes.html
@@ -100,8 +100,8 @@
             <button id="searchButton" class="search-button">Search</button>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/school shoes/best quality laced black shoes-39.avif" alt="Mesh sneakers" class="shoe-img">
+            <a href="/client/Shoe-web/Payment method.html">
+                <img src="/client/Kids/boys shoes/school shoes/best quality laced black shoes-39.avif" alt="Mesh sneakers" class="shoe-img">
                 <div class="overlay">
                     <h3>best quality laced black shoes-39</h3>
                     <p>Sh 1999.00</p>
@@ -109,8 +109,8 @@
             </a>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/school shoes/Dongbula lace-less black shoes-40.jpeg" alt="Baby Shoes" class="shoe-img">
+            <a href="/client/Shoe-web/Payment method.html">
+                <img src="/client/Kids/boys shoes/school shoes/Dongbula lace-less black shoes-40.jpeg" alt="Baby Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Dongbula lace-less black shoes-40.</h3>
                     <p>Sh 1499.00</p>
@@ -118,8 +118,8 @@
             </a>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/school shoes/Shupavu boys toughees black shoes -40.webp" alt="air force Shoes" class="shoe-img">
+            <a href="/client/Shoe-web/Payment method.html">
+                <img src="/client/Kids/boys shoes/school shoes/Shupavu boys toughees black shoes -40.webp" alt="air force Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Shupavu boys toughees black shoes -40</h3>
                     <p>Sh 1399.00</p>
@@ -128,8 +128,8 @@
         </div>
         <!-- Add more shoe images and overlays here -->
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/school shoes/Dongbula lace-less black shoes-41.jpeg" alt="air force Shoes" class="shoe-img">
+            <a href="/client/Shoe-web/Payment method.html">
+                <img src="/client/Kids/boys shoes/school shoes/Dongbula lace-less black shoes-41.jpeg" alt="air force Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Dongbula lace-less black shoes-41</h3>
                     <p>Sh 1599.00</p>
@@ -137,8 +137,8 @@
             </a>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/school shoes/Boys school wear black-39.jpeg" class="shoe-img">
+            <a href="/client/Shoe-web/Payment method.html">
+                <img src="/client/Kids/boys shoes/school shoes/Boys school wear black-39.jpeg" class="shoe-img">
                 <div class="overlay">
                     <h3>Boys school wear black-39</h3>
                     <p>Sh 1019.00</p>
@@ -146,8 +146,8 @@
             </a>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/school shoes/laced black senour school shoes-44.webp" alt="Mesh sneakers" class="shoe-img">
+            <a href="/client/Shoe-web/Payment method.html">
+                <img src="/client/Kids/boys shoes/school shoes/laced black senour school shoes-44.webp" alt="Mesh sneakers" class="shoe-img">
                 <div class="overlay">
                     <h3>laced black senior school shoes-44</h3>
                     <p>Sh 1,799.00</p>
@@ -155,8 +155,8 @@
             </a>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/school shoes/Lace-less black-35.jpeg" alt="Baby Shoes" class="shoe-img">
+            <a href="/client/Shoe-web/Payment method.html">
+                <img src="/client/Kids/boys shoes/school shoes/Lace-less black-35.jpeg" alt="Baby Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Lace-less black-35</h3>
                     <p>Sh 1599.00</p>
@@ -164,8 +164,8 @@
             </a>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/school shoes/Lassed school shoe-43.webp" alt="air force Shoes" class="shoe-img">
+            <a href="/client/Shoe-web/Payment method.html">
+                <img src="/client/Kids/boys shoes/school shoes/Lassed school shoe-43.webp" alt="air force Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Lassed school shoe-43</h3>
                     <p>Sh 1599</p>
@@ -173,8 +173,8 @@
             </a>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/school shoes/Surefit laced-on school shoes-42" alt="air force Shoes" class="shoe-img">
+            <a href="/client/Shoe-web/Payment method.html">
+                <img src="/client/Kids/boys shoes/school shoes/Surefit laced-on school shoes-42" alt="air force Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Surefit laced-on school shoes-42</h3>
                     <p>Sh 1599</p>
@@ -182,16 +182,16 @@
             </a>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/school shoes/toughees black-42.jpeg" alt="air force Shoes" class="shoe-img">
+            <a href="/client/Shoe-web/Payment method.html">
+                <img src="/client/Kids/boys shoes/school shoes/toughees black-42.jpeg" alt="air force Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Toughees black-42r</h3>
                     <p>Sh 2109.00</p>
                 </div>
             </a>
         </div><div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/school shoes/Toughees_School.jpg" alt="air force Shoes" class="shoe-img">
+            <a href="/client/Shoe-web/Payment method.html">
+                <img src="/client/Kids/boys shoes/school shoes/Toughees_School.jpg" alt="air force Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Toughees_School-39</h3>
                     <p>Sh 1599</p>
