--- a/client/Shoe-web/Shoe-tec girls.html
+++ b/client/Shoe-web/Shoe-tec girls.html
@@ -84,16 +84,16 @@
     <h1>Girls Shoes</h1>
     <div class="container">
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/girls shoes/Rindas.webp" class="shoe-img">
+            <a href="/client/Shoe-web/Payment method.html">
+                <img src="/client/Kids/girls shoes/Rindas.webp" class="shoe-img">
                 <div class="overlay">
                     <h3>Sneakers</h3>
                 </div>
             </a>
         </div>
         <div class="button-container">
-            <button onclick="window.location.href='/Shoe-web/Mens.html'" class="button">Mesh sneakers</button>
-            <button onclick="window.location.href='/Shoe-web/ladies-shoes.html'" class="button">School shoes</button>
+            <button onclick="window.location.href='/client/Shoe-web/Mens.html'" class="button">Mesh sneakers</button>
+            <button onclick="window.location.href='/client/Shoe-web/ladies-shoes.html'" class="button">School shoes</button>
         </div>
     </div>
 </body>
