--- a/client/home.html
+++ b/client/home.html
@@ -181,28 +181,28 @@
         <section id="home" class="hero">
             <h2>Welcome to Hero-tec Shoe Trading Platform</h2>
             <p>NAIROBI-KENYA</p>
-            <img src="/Shoe images/Shoe collection.webp" alt="Shoe Collection">
+            <img src="../client/Shoe images/Shoe collection.webp" alt="Shoe Collection">
         </section>
         <div class="sections">
             <div class="section">
                 <h3>Men's Collection</h3>
                 <p>Explore our exclusive collection of men's shoes.</p>
                 <div class="buttons">
-                    <button onclick="window.location.href='/Shoe-web/Mens.html'">Shop Men</button>
+                    <button onclick="window.location.href='Shoe-web/Mens.html'">Shop Men</button>
                 </div>
             </div>
             <div class="section">
                 <h3>Ladies' Collection</h3>
                 <p>Discover the latest trends in women's footwear.</p>
                 <div class="buttons">
-                    <button onclick="window.location.href='/Shoe-web/ladies-shoes.html'">Shop Ladies</button>
+                    <button onclick="window.location.href='Shoe-web/ladies-shoes.html'">Shop Ladies</button>
                 </div>
             </div>
             <div class="section">
                 <h3>Kids' Collection</h3>
                 <p>Find the perfect shoes for your little ones.</p>
                 <div class="buttons">
-                    <button onclick="window.location.href='/Shoe-web/kids-collection.html'">Shop Kids</button>
+                    <button onclick="window.location.href='Shoe-web/kids-collection.html'">Shop Kids</button>
                 </div>
             </div>
         </div>
