--- a/client/Shoe-web/kids-collection.html
+++ b/client/Shoe-web/kids-collection.html
@@ -52,8 +52,8 @@
     <div class="container">
         <h1><b>Kids Collection</b></h1>
         <div class="button-container">
-            <button onclick="window.location.href='/Shoe-web/Shoe-tec boys.html'" class="button">Boys</button>
-            <button onclick="window.location.href='/Shoe-web/Shoe-tec girls.html'" class="button">Girls</button>
+            <button onclick="window.location.href='../Shoe-web/Shoe-tec_boys.html'" class="button">Boys</button>
+            <button onclick="window.location.href='../Shoe-web/Shoe-tec_girls.html'" class="button">Girls</button>
         </div>
     </div>
 </body>
