--- a/client/Shoe-web/ladies-shoes.html
+++ b/client/Shoe-web/ladies-shoes.html
@@ -109,8 +109,8 @@
             <button id="searchButton" class="search-button">Search</button>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Ladies shoes image/Barbie shoe collab" class="shoe-img">
+            <a href="Shoe-web/Payment method.html">
+                <img src="../Ladies shoes image/Barbie shoe collab" class="shoe-img">
                 <div class="overlay">
                     <h3>Barbie Shoe Collab</h3>
                     <p>Sh 999</p>
@@ -119,8 +119,8 @@
         </div>
         <!-- Add more shoe images and overlays here -->
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Ladies shoes image/ladies 1.jpeg" alt="Ladies Shoes" class="shoe-img">
+            <a href="Shoe-web/Payment method.html">
+                <img src="../Ladies shoes image/ladies 1.jpeg" alt="Ladies Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Ladies Shoes</h3>
                     <p>Sh 1099</p>
@@ -128,8 +128,8 @@
             </a>
         </div>
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Ladies shoes image/Chic.jpeg" alt="Chic Shoes" class="shoe-img">
+            <a href="Shoe-web/Payment method.html">
+                <img src="../Ladies shoes image/Chic.jpeg" alt="Chic Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Chic Shoes</h3>
                     <p>Sh 999</p>
@@ -138,8 +138,8 @@
         </div>
         
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Ladies shoes image/ladies 2.jpeg" alt="Ladies Shoes" class="shoe-img">
+            <a href="Shoe-web/Payment method.html">
+                <img src="../Ladies shoes image/ladies 2.jpeg" alt="Ladies Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Ladies Shoes</h3>
                     <p>Sh 1599</p>
