--- a/client/about.html
+++ b/client/about.html
@@ -197,17 +197,17 @@
         </section>
         <section class="team">
             <div class="team-member">
-                <img src="/Shoe-web/David..jpg" alt="Team Member 1">
+                <img src="Shoe-web/David..jpg" alt="Team Member 1">
                 <h3>David kiamba</h3>
                 <p>Founder & CEO</p>
             </div>
             <div class="team-member">
-                <img src="/Shoe-web/Natalie.B.jpg" alt="Team Member 2">
+                <img src="Shoe-web/Natalie.B.jpg" alt="Team Member 2">
                 <h3>Natalie Blessing</h3>
                 <p>Chief Marketing Officer</p>
             </div>
             <div class="team-member">
-                <img src="/Shoe-web/meshack.jpg" alt="Team Member 3">
+                <img src="Shoe-web/meshack.jpg" alt="Team Member 3">
                 <h3>Meshack Odondi</h3>
                 <p>Senior Security analyst</p>
             </div>
