--- a/client/Shoe-web/mesh-sneakers.html
+++ b/client/Shoe-web/mesh-sneakers.html
@@ -139,8 +139,8 @@
     <div class="container">
         <!-- Shoe Image Containers -->
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/Stelatoes.jpeg" alt="Stelatoes" class="shoe-img">
+            <a href="../Shoe-web/Payment method.html">
+                <img src="../Kids/boys shoes/Stelatoes.jpeg" alt="Stelatoes" class="shoe-img">
                 <div class="overlay">
                     <h3>Stelatoes</h3>
                     <p>Sh 999</p>
@@ -149,8 +149,8 @@
         </div>
 
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/Mesh sneakers/babys sports wear.jpeg" alt="Baby Sports Wear" class="shoe-img">
+            <a href="../Shoe-web/Payment method.html">
+                <img src="../Kids/boys shoes/Mesh sneakers/babys sports wear.jpeg" alt="Baby Sports Wear" class="shoe-img">
                 <div class="overlay">
                     <h3>Black Baby Sports Wear</h3>
                     <p>Sh 499</p>
@@ -159,8 +159,8 @@
         </div>
 
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/Mesh sneakers/Kids air force white-grey.jpeg" alt="Kids Air Force" class="shoe-img">
+            <a href="../Shoe-web/Payment method.html">
+                <img src="../Kids/boys shoes/Mesh sneakers/Kids air force white-grey.jpeg" alt="Kids Air Force" class="shoe-img">
                 <div class="overlay">
                     <h3>Kids Air Force White-Grey</h3>
                     <p>Sh 1599</p>
@@ -169,8 +169,8 @@
         </div>
 
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/Mesh sneakers/Causal comfy sports.jpeg" alt="Causal Comfy Sports" class="shoe-img">
+            <a href="../Shoe-web/Payment method.html">
+                <img src="../Kids/boys shoes/Mesh sneakers/Causal comfy sports.jpeg" alt="Causal Comfy Sports" class="shoe-img">
                 <div class="overlay">
                     <h3>Casual Comfy Sports</h3>
                     <p>Sh 1019</p>
@@ -179,8 +179,8 @@
         </div>
 
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/boys shoes/Mesh sneakers/breathable kids sneakers black.jpeg" alt="Breathable Kids Sneakers Black" class="shoe-img">
+            <a href="../Shoe-web/Payment method.html">
+                <img src="../Kids/boys shoes/Mesh sneakers/breathable kids sneakers black.jpeg" alt="Breathable Kids Sneakers Black" class="shoe-img">
                 <div class="overlay">
                     <h3>Breathable Kids Sneakers Black</h3>
                     <p>Sh 799</p>
@@ -189,8 +189,8 @@
         </div>
 
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/girls shoes/Non-slip sneakers.png" alt="Non-slip Sneakers" class="shoe-img">
+            <a href="../Shoe-web/Payment method.html">
+                <img src="../Kids/girls shoes/Non-slip sneakers.png" alt="Non-slip Sneakers" class="shoe-img">
                 <div class="overlay">
                     <h3>Non-slip Sneakers</h3>
                     <p>Sh 499</p>
@@ -199,8 +199,8 @@
         </div>
 
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/girls shoes/2X sport shoes.jpeg" alt="2X Sport Shoes" class="shoe-img">
+            <a href="../Shoe-web/Payment method.html">
+                <img src="../Kids/girls shoes/2X sport shoes.jpeg" alt="2X Sport Shoes" class="shoe-img">
                 <div class="overlay">
                     <h3>2X Sport Shoes</h3>
                     <p>Sh 1599</p>
@@ -209,8 +209,8 @@
         </div>
 
         <div class="shoe-img-container">
-            <a href="/Shoe-web/Payment method.html">
-                <img src="/Kids/girls shoes/Toddler sports wear.jpeg" alt="Toddler Sports Wear" class="shoe-img">
+            <a href="../Shoe-web/Payment method.html">
+                <img src="../Kids/girls shoes/Toddler sports wear.jpeg" alt="Toddler Sports Wear" class="shoe-img">
                 <div class="overlay">
                     <h3>Toddler Sports Wear</h3>
                     <p>Sh 1599</p>
